// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Title" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: #696c6e;
  display: block;
  font-size: 32px;
  font-weight: 600;
  text-align: center;
  text-transform: none;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Title
  </div>
</div>
`;

exports[`"Title" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: #696c6e;
  display: block;
  font-size: 32px;
  font-weight: 600;
  text-align: center;
  text-transform: none;
  margin-bottom: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Title
  </div>
</div>
`;
